# qt-log-monitor

./: CMakeLists.txt  LICENSE  main.cpp
QtLogMonitor/: Main.qml  README.md
qml/: Main.qml
qml/components/: LogList.qml  TopBar.qml
src/: main.cpp
